--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parse-server",
   "version": "2.6.3",
   "description": "An express module providing a Parse-compatible API server",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-server"
